NXT-2124: Add `copy` flag to `moveItem`; adapt `LocalWorkspace`
NXT-2124 (Duplicate space item)